Fix Infinispan cache startup failure on Java 21+ by disabling L2 cache (#113)
Disable Hibernate L2 cache in openmrs-runtime.properties by setting
hibernate.cache.use_second_level_cache=false. This prevents Infinispan
from initializing, avoiding the Java 21+ incompatibility where
Subject.getSubject() throws UnsupportedOperationException (removed
entirely in Java 24 via JEP 486).

OpenMRS's HibernateSessionFactoryBean merges runtime properties into
the Hibernate config, so this single property prevents Infinispan's
InfinispanRegionFactory from ever being created.

For a standalone/demo distribution the L2 cache performance impact is
negligible. See PR #112 for an alternative approach that keeps L2
caching by patching the Infinispan WAR.

Also sync the Bootstrap.java default vm_arguments with the runtime
properties by adding the missing --add-opens flag.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>